tests/errors/runtime.WrongArgumentType.1.art
print
    map
        1..2
            3 
                4